- update settings and extensions - develop full task list app - remove prettier settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,22 +1,23 @@
 {
-    "recommendations": [
-        "Vue.volar",
-        "dbaeumer.vscode-eslint",
-        "esbenp.prettier-vscode",
-        "formulahendry.auto-close-tag",
-        "formulahendry.auto-complete-tag",
-        "steoates.autoimport",
-        "ms-vscode.vscode-typescript-next",
-        "ritwickdey.liveserver",
-        "raillyhugo.one-hunter",
-        "whizkydee.material-palenight-theme",
-        "ahmadawais.shades-of-purple",
-        "bradlc.vscode-tailwindcss",
-        "stivo.tailwind-fold",
-        "enkia.tokyo-night",
-        "raunofreiberg.vesper",
-        "christian-kohler.path-intellisense",
-        "sdras.vue-vscode-snippets",
-        "hollowtree.vue-snippets"
-    ]
+  "recommendations": [
+    "Vue.volar",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "formulahendry.auto-close-tag",
+    "formulahendry.auto-complete-tag",
+    "steoates.autoimport",
+    "ms-vscode.vscode-typescript-next",
+    "ritwickdey.liveserver",
+    "raillyhugo.one-hunter",
+    "whizkydee.material-palenight-theme",
+    "ahmadawais.shades-of-purple",
+    "bradlc.vscode-tailwindcss",
+    "stivo.tailwind-fold",
+    "enkia.tokyo-night",
+    "raunofreiberg.vesper",
+    "christian-kohler.path-intellisense",
+    "sdras.vue-vscode-snippets",
+    "hollowtree.vue-snippets",
+    "GitHub.github-vscode-theme"
+  ]
 }
